# cmake-qtplugin

./: CMakeLists.txt  filtersplugin.cpp  filtersplugin.h  interface.h  main.cpp  pluginbase.h
